@@ -23,7 +23,54 @@ Download [windows/linux/macos binaries](https://github.com/TravaOpenJDK/trava-jd
 ## Configure
 Everything is configured for you, just run your application with downloaded JDK. For HotswapAgent configuration look at [hotswapagent.org](http://hotswapagent.org/)
 
-## Build your binaries!
+# Detail Info
+
+Option **-XXaltjvm=dcevm** is not supported starting with dcevm11. There is full java-11-openjdk distribution instead of it.
+
+**WARNING**: OpenJDK-hotswap (dcevm) is not intended to use as 'system' JDK, since it uses serial GC by default, however it is possible to use *G1* now.
+
+## Content
+* java11-openjdk-dcevm-linux.tar.gz - **linux** x64 JDK binary bundled with latest SNAPHOT release of hotswap-agent.jar
+* java11-openjdk-dcevm-windows.zip - **windows** x64 JDK binary bundled with latest SNAPHOT release of hotswap-agent.jar
+* java11-openjdk-dcevm-osx.tar.gz - **macos** JDK binary bundled with latest SNAPHOT release of hotswap-agent.jar
+
+# HOWTO
+
+### Disable integrated HotswapAgent
+Use option `-XX:+DisableHotswapAgent `
+
+### Fallback to standard redefinition
+Use option `-XX:-AllowEnhancedClassRedefinition`
+
+### Using DCEVM image in existing java-11-openjdk
+Find out `libjvm.so` inder directory `lib/server/` and copy it to existing jdk-11 to directory `lib/dcevm`, dcevm directory must be at the same level as folder `server/` with system JVM. All should work as you are used to from dcevm8. 
+
+### Check distribution
+```
+hotswap@skybber ~ $ java -version
+Starting HotswapAgent '/usr/lib/jvm/java-11-haopenjdk/lib/hotswap/hotswap-agent.jar'
+HOTSWAP AGENT: 16:43:16.605 INFO (org.hotswap.agent.HotswapAgent) - Loading Hotswap agent {1.3.1-SNAPSHOT} - unlimited runtime class redefinition.
+HOTSWAP AGENT: 16:43:16.801 INFO (org.hotswap.agent.config.PluginRegistry) - Discovered plugins: [Hotswapper, JdkPlugin, WatchResources, ClassInitPlugin, AnonymousClassPatch, Hibernate, Hibernate3JPA, Hibernate3, Spring, Jersey1, Jersey2, Jetty, Tomcat, ZK, Logback, Log4j2, MyFaces, Mojarra, Omnifaces, Seam, ELResolver, WildFlyELResolver, OsgiEquinox, Owb, Proxy, WebObjects, Weld, JBossModules, ResteasyRegistry, Deltaspike, GlassFish, Vaadin]
+openjdk version "11" 2019-11-06
+OpenJDK Runtime Environment (build 11+0)
+OpenJDK 64-Bit Server VM (build 11+0, mixed mode)
+```
+With HotswapAgent disabled:
+
+```
+hotswap@skybber ~ $ java -XX:+DisableHotswapAgent -version
+openjdk version "11" 2019-11-06
+OpenJDK Runtime Environment (build 11+0)
+OpenJDK 64-Bit Server VM (build 11+0, mixed mode)
+```
+
+## Package info
+* G1 GC support - use `-XX:+UseG1GC` VM option to turn on G1.
+* Cuncurrent Mark Sweep GC support - use `-XX:+UseConcMarkSweepGC` VM option to turn on this feature.
+* Newest HotswapAgent 1.4.1
+
+
+# Build your binaries!
 It is not necessary to use supplied binaries, you can build own binaries. It is simple and it can be done in several
 clicks:
 
@@ -33,12 +80,12 @@ clicks:
 * Create tagged commit and wait for Travis to build your binaries!
 
 
-## HOWTO deploy a new release
+# HOWTO deploy a new release
 
 ## New branch
 If a new branch is created in source repository, then modify `--branch` parameter in `.travis.yml` to the new branch.
 
-### Release with existing TAG
+## Release with existing TAG
 * If repository has some updates since last tagged, then move tag:
 ```
     git push origin :refs/tags/${SOURCE_JDK_TAG}
@@ -48,7 +95,7 @@ If a new branch is created in source repository, then modify `--branch` paramete
 * Cleanup binaries from Releases/
 * Trigger tagged job on Travis (if not triggered automatically)
 
-### Release with new TAG
+## Release with new TAG
 Let's jdk source repository has new tag of value **TAGVAL**
 * Set variable `SOURCE_JDK_TAG=` in `.tarvis.yml` to **TAGVAL**
 * Commit and tag commit with **TAGVAL**
